objects/Authorization_Product_Line__c.object
<CustomObject>
    <description>R7A - Authorization Product Line</description>
    <fields>
        <fullName>AUBusinessUnitbackup__c</fullName>
        <label>AUBusinessUnitbackup</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>CASESAFEID(Channel_Partner_Authorization__r.Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Status_Time__c</fullName>
        <label>Approved Status Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorization_Approved_Date__c</fullName>
        <formula>IF (ISPICKVAL(Channel_Partner_Authorization__r.Approval_Progress__c, &apos;Approved&apos;),  Channel_Partner_Authorization__r.Approved_Date__c, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorization_Record_Type__c</fullName>
        <formula>Channel_Partner_Authorization__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Authorization Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit1__c</fullName>
        <globalPicklist>Business_Unit</globalPicklist>
        <label>Business Unit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>R7A</description>
        <label>Business Unit Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Authorization__c</fullName>
        <description>R7</description>
        <label>Channel Partner Authorization</label>
        <referenceTo>Channel_Partner_Authorization__c</referenceTo>
        <relationshipLabel>Authorization Product Lines</relationshipLabel>
        <relationshipName>Authorization_Product_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Division1__c</fullName>
        <globalPicklist>Division</globalPicklist>
        <label>Division</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>R7A</description>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Divisonbackup__c</fullName>
        <label>Divisonbackup</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Authorized__c</fullName>
        <formula>IF(ISPICKVAL( Engineering_Status__c , &quot;approved&quot;),&quot;X&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engineering Authorized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineering_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineering Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineering_Status__c</fullName>
        <description>R7 - Engineering Status</description>
        <label>Engineering Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Group_FULL__c</fullName>
        <formula>Product__r.Related_Product_Group__r.Product_Group_Full__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Authorization Product Lines</relationshipLabel>
        <relationshipName>Authorization_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Status__c</fullName>
        <description>R7 - Public Status</description>
        <label>Public Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publish_to_abb_com_Requested__c</fullName>
        <defaultValue>true</defaultValue>
        <description>R7A - Publish to abb.com Requested</description>
        <label>Publish to abb.com Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Authorized__c</fullName>
        <formula>IF(ISPICKVAL(Sales_Status__c, &quot;approved&quot;),&quot;X&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Authorized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Status__c</fullName>
        <description>R7A - Sales Status</description>
        <label>Sales Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Authorized__c</fullName>
        <formula>IF(ISPICKVAL( Service_Status__c , &quot;approved&quot;),&quot;X&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Authorized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Status__c</fullName>
        <description>R7 - Service Status</description>
        <label>Service Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Authorized__c</fullName>
        <formula>IF(ISPICKVAL( Support_Status__c , &quot;approved&quot;),&quot;X&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Authorized</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Status__c</fullName>
        <description>R7 - Support Status</description>
        <label>Support Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <label>Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Authorization Product Line</label>
    <nameField>
        <displayFormat>PRO-{0000000}</displayFormat>
        <label>Product Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_public_Status</fullName>
        <active>true</active>
        <description>R7A</description>
        <errorConditionFormula>Channel_Partner_Authorization__r.RecordType.Name == &apos;Country driven Authorization&apos; &amp;&amp;   ISBLANK(Channel_Partner_Authorization__r.Business_Units_Covered__c) &amp;&amp; ISCHANGED( Public_Status__c )</errorConditionFormula>
        <errorMessage>You can not change the &apos;Public Status&apos; When the &apos;Business Unit Covered&apos; is empty in the Authorization</errorMessage>
    </validationRules>
</CustomObject>